# portfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  tailwind.config.js
src/: main.rs
src/app/: about.rs  contact.rs  home.rs  mod.rs  portfolio.rs
src/components/: nav.rs
